--- a/index.html
+++ b/index.html
@@ -36,15 +36,19 @@
         </nav>
         <ul class="contact-list">
           <li class="contact-item">
-            <a
-              class="contact-link icon-envelope"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            
+            <a class="contact-link" href="mailto:info@devstudio.com"
+              ><svg class="contanct-icon-envelope">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a
             >
           </li>
           <li class="contact-item">
-            <a class="contact-link icon-smartphone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            
+            <a class="contact-link" href="tel:+380961111111"
+              ><svg class="contanct-icon-smartphone">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -139,42 +143,36 @@
                 <div class="team-title">
                   <h3 class="team-member">Игорь Демьяненко</h3>
                   <p class="position-member" lang="en">Product Designer</p>
-                  <div class="social-links">
-                    <ul class="social-list">
-                      <li class="social-item">
-                        <a href=""
-                          ><img
-                            src="./images/instagram.svg"
-                            alt="instagram"
-                            width="20px"
-                        /></a>
-                      </li>
-                      <li class="social-item">
-                        <a href=""
-                          ><img
-                            src="./images/twitter.svg"
-                            alt="twitter"
-                            width="20px"
-                        /></a>
-                      </li>
-                      <li class="social-item">
-                        <a href=""
-                          ><img
-                            src="./images/facebook.svg"
-                            alt="facebook"
-                            width="20px"
-                        /></a>
-                      </li>
-                      <li class="social-item">
-                        <a href=""
-                          ><img
-                            src="./images/linkedin.svg"
-                            alt="linkedin"
-                            width="20px"
-                        /></a>
-                      </li>
-                    </ul>
-                  </div>
+                  <ul class="team-social-list">
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -182,6 +180,36 @@
                 <div class="team-title">
                   <h3 class="team-member">Ольга Репина</h3>
                   <p class="position-member" lang="en">Frontend Developer</p>
+                  <ul class="team-social-list">
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -189,6 +217,36 @@
                 <div class="team-title">
                   <h3 class="team-member">Николай Тарасов</h3>
                   <p class="position-member" lang="en">Marketing</p>
+                  <ul class="team-social-list">
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -196,56 +254,96 @@
                 <div class="team-title">
                   <h3 class="team-member">Михаил Ермаков</h3>
                   <p class="position-member" lang="en">UI Designer</p>
+                  <ul class="team-social-list">
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a href="" class="team-social-link"
+                        ><svg class="team-social-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
             </ul>
           </div>
         </div>
       </section>
-
       <section class="section customers">
         <div class="container">
           <h2 class="main-title">Постоянные клиенты</h2>
-          <div>
-            <ul class="customers-list">
-              <li class="customers-item">
-                <a href=""
-                  ><img src="./images/customers1.svg" alt="Логотип Компании"
-                /></a>
-              </li>
-              <li class="customers-item">
-                <a href=""
-                  ><img src="./images/customers2.svg" alt="Логотип Компании"
-                /></a>
-              </li>
-              <li class="customers-item">
-                <a href=""
-                  ><img src="./images/customers3.svg" alt="Логотип Компании"
-                /></a>
-              </li>
-              <li class="customers-item">
-                <a href=""
-                  ><img src="./images/customers4.svg" alt="Логотип Компании"
-                /></a>
-              </li>
-              <li class="customers-item">
-                <a href=""
-                  ><img src="./images/customers5.svg" alt="Логотип Компании"
-                /></a>
-              </li>
-              <li class="customers-item">
-                <a href=""
-                  ><img src="./images/customers6.svg" alt="Логотип Компании"
-                /></a>
-              </li>
-            </ul>
-          </div>
+          <ul class="customers-list">
+            <li class="customers-item">
+              <a href="" class="customers-link"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customers1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customers2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customers3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customers4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customers5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customers6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <!--Подвал контакты-->
     <footer class="footer-section">
       <div class="container">
+        <div>
         <a class="logo-items" href="./index.html"
           ><span class="logo-web" lang="en">Web</span
           ><span class="logo-studio-footer" lang="en">Studio</span></a
@@ -273,20 +371,37 @@
             </li>
           </ul>
         </address>
+      </div>
         <div class="social">
           <h4 class="social-title">ПРИСОЕДИНЯЙТЕСЬ</h4>
           <ul class="social-list">
-            <li class="social-item icon-instagram">
-              <a href=""><img src="" alt="" /></a>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-item icon-twitter">
-              <a href=""><img src="" alt="" /></a>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-item icon-facebook">
-              <a href=""><img src="" alt="" /></a>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-item icon-lincedin">
-              <a href=""><img src="" alt="" /></a>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
