--- a/portfolio.html
+++ b/portfolio.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link href="./css/styles.css" rel="stylesheet" />
-    <title>Портфолио</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <!--Верхняя линия-->
@@ -36,15 +37,19 @@
         </nav>
         <ul class="contact-list">
           <li class="contact-item">
-            <a
-              class="contact-link icon-envelope"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            
+            <a class="contact-link" href="mailto:info@devstudio.com"
+              ><svg class="contanct-icon-envelope">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a
             >
           </li>
           <li class="contact-item">
-            <a class="contact-link icon-smartphone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            
+            <a class="contact-link" href="tel:+380961111111"
+              ><svg class="contanct-icon-smartphone">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -196,6 +201,7 @@
     <!--Подвал контакты-->
     <footer class="footer-section">
       <div class="container">
+        <div>
         <a class="logo-items" href="./index.html"
           ><span class="logo-web" lang="en">Web</span
           ><span class="logo-studio-footer" lang="en">Studio</span></a
@@ -223,6 +229,40 @@
             </li>
           </ul>
         </address>
+      </div>
+        <div class="social">
+          <h4 class="social-title">ПРИСОЕДИНЯЙТЕСЬ</h4>
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
