--- a/portfolio.html
+++ b/portfolio.html
@@ -81,14 +81,14 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <img src="./images/img4.jpg" alt="Экран ноутбука с фото" width="370" />
-                <div class="portfolio-text-wraper">
-                  <h3 class="portfolio-item-title">Технокряк</h3>
-                  <p class="portfolio-item-discription">Веб-сайт</p>
-                </div>
               </a>
+              <div class="portfolio-text-wraper">
+                <h3 class="portfolio-item-title">Технокряк</h3>
+                <p class="portfolio-item-discription">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/img5.jpg" alt="Баскетболисты с мячём" width="370" />
               </a>
               <div class="portfolio-text-wraper">
@@ -100,7 +100,9 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href=""><img src="./images/img6.jpg" alt="Эмблема ресторана" width="370" /></a>
+              <a class="portfolio-link" href=""
+                ><img src="./images/img6.jpg" alt="Эмблема ресторана" width="370"
+              /></a>
               <div class="portfolio-text-wraper">
                 <h3 class="portfolio-item-title">
                   Ресторан
@@ -110,7 +112,9 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href=""><img src="./images/img7.jpg" alt="Наушники" width="370" /></a>
+              <a class="portfolio-link" href=""
+                ><img src="./images/img7.jpg" alt="Наушники" width="370"
+              /></a>
               <div class="portfolio-text-wraper">
                 <h3 class="portfolio-item-title">
                   Проект
@@ -120,7 +124,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/img8.jpg" alt="Две коробки с надписями" width="370" />
               </a>
               <div class="portfolio-text-wraper">
@@ -132,7 +136,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/img9.jpg" alt="Экран монитора с страницей" width="370" />
               </a>
               <div class="portfolio-text-wraper">
@@ -141,7 +145,9 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href=""><img src="./images/img10.jpg" alt="Открытая книга" width="370" /></a>
+              <a class="portfolio-link" href=""
+                ><img src="./images/img10.jpg" alt="Открытая книга" width="370"
+              /></a>
               <div class="portfolio-text-wraper">
                 <h3 class="portfolio-item-title">
                   Издание
@@ -151,7 +157,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/img11.jpg" alt="Лейба прямоугольная фон белый" width="370" />
               </a>
               <div class="portfolio-text-wraper">
@@ -163,7 +169,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/img12.jpg" alt="Руки на клавиатуре ноутбука" width="370" />
               </a>
               <div class="portfolio-text-wraper">
