--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
         <ul class="contact-list">
           <li class="contact-item">
             <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg class="contanct-icon-envelope">
-                <use href="./images/iconso.svg#icon-envelope"></use>
+              <svg class="contanct-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contact-item">
             <a class="contact-link" href="tel:+380961111111">
-              <svg class="contanct-icon-smartphone">
-                <use href="./images/iconso.svg#icon-smartphone"></use>
+              <svg class="contanct-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -71,25 +71,45 @@
       <section class="features">
         <div class="container">
           <ul class="features-list">
-            <li class="feature-item icon-antena">
+            <li class="feature-item">
+              <div class="feature-item-block">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Внимание к деталям</h3>
               <p class="item-discription">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="feature-item icon-watch">
+            <li class="feature-item">
+              <div class="feature-item-block">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Пунктуальность</h3>
               <p class="item-discription">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="feature-item icon-vector">
+            <li class="feature-item">
+              <div class="feature-item-block">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Планирование</h3>
               <p class="item-discription">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="feature-item icon-astronaut">
+            <li class="feature-item">
+              <div class="feature-item-block">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Современные технологии</h3>
               <p class="item-discription">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -132,28 +152,28 @@
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -169,28 +189,28 @@
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -206,28 +226,28 @@
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -243,28 +263,28 @@
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-social-item">
                       <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="20" height="20">
-                          <use href="./images/iconso.svg#icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -282,42 +302,42 @@
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon" width="106" height="60">
-                  <use href="./images/iconso.svg#icon-customers1"></use>
+                  <use href="./images/icons.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon" width="106" height="60">
-                  <use href="./images/iconso.svg#icon-customers2"></use>
+                  <use href="./images/icons.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon" width="106" height="60">
-                  <use href="./images/iconso.svg#icon-customers3"></use>
+                  <use href="./images/icons.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon" width="106" height="60">
-                  <use href="./images/iconso.svg#icon-customers4"></use>
+                  <use href="./images/icons.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon" width="106" height="60">
-                  <use href="./images/iconso.svg#icon-customers5"></use>
+                  <use href="./images/icons.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon" width="106" height="60">
-                  <use href="./images/iconso.svg#icon-customers6"></use>
+                  <use href="./images/icons.svg#icon-logo6"></use>
                 </svg>
               </a>
             </li>
@@ -360,28 +380,28 @@
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
