--- a/portfolio.html
+++ b/portfolio.html
@@ -38,16 +38,16 @@
         <ul class="contact-list">
           <li class="contact-item">
             <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg class="contanct-icon-envelope">
-                <use href="./images/iconso.svg#icon-envelope"></use>
+              <svg class="contanct-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contact-item">
             <a class="contact-link" href="tel:+380961111111">
-              <svg class="contanct-icon-smartphone">
-                <use href="./images/iconso.svg#icon-smartphone"></use>
+              <svg class="contanct-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -216,28 +216,28 @@
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/iconso.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
